# fake_serialize

./: Cargo.toml  LICENSE  README.md
examples/: constraint.rs  simple.rs
src/: lib.rs
