[package]
name = "fake_serialize"
version = "0.1.0"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "A rust macro for implementing dummy implementations of the traits serde::Serialize and serde::Deserialize"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/fake_serialize.git"
readme = "README.md"
keywords = ["serde", "dummy", "fake", "serialize", "deserialize"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional=true }

[features]
defaults = []
json = ["serde_json"]

